--- a/B1_WikipediaScrapper.ipynb
+++ b/B1_WikipediaScrapper.ipynb
@@ -938,9 +938,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -952,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
