With Try block, runs back to 2003
minimal file failures.  roughly one per season.

--- a/SQLalchemy.ipynb
+++ b/SQLalchemy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
     "from sqlalchemy.orm import Session\n",
     "import pandas as pd\n",
     "from lists import *\n",
-    "from B2_ConverterHelpers import getFileNames"
+    "from B2_ConverterHelpers import getFiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -49,24 +49,271 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>QP2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [yr, lge, rnd, session]\n",
-       "Index: []"
+       "      yr     lge  rnd session\n",
+       "0   2004  MotoGP    8     QP2\n",
+       "1   2004  MotoGP    8     QP2\n",
+       "2   2004  MotoGP    8     QP2\n",
+       "3   2004  MotoGP    8     QP2\n",
+       "4   2004  MotoGP    8     QP2\n",
+       "5   2004  MotoGP    8     QP2\n",
+       "6   2004  MotoGP    8     QP2\n",
+       "7   2004  MotoGP    8     QP2\n",
+       "8   2004  MotoGP    8     QP2\n",
+       "9   2004  MotoGP    8     QP2\n",
+       "10  2004  MotoGP    8     QP2\n",
+       "11  2004  MotoGP    8     QP2\n",
+       "12  2004  MotoGP    8     QP2\n",
+       "13  2004  MotoGP    8     QP2\n",
+       "14  2004  MotoGP    8     QP2\n",
+       "15  2004  MotoGP    8     QP2\n",
+       "16  2004  MotoGP    8     QP2\n",
+       "17  2004  MotoGP    8     QP2\n",
+       "18  2004  MotoGP    8     QP2\n",
+       "19  2004  MotoGP    8     QP2\n",
+       "20  2004  MotoGP    8     QP2\n",
+       "21  2004  MotoGP    8     QP2\n",
+       "22  2004  MotoGP    8     QP2\n",
+       "23  2004  MotoGP    8     QP2\n",
+       "24  2004  MotoGP    8     QP2\n",
+       "25  2004  MotoGP    8     QP2\n",
+       "26  2004  MotoGP    8     QP2\n",
+       "27  2004  MotoGP    8     QP2\n",
+       "28  2004  MotoGP    8     QP2\n",
+       "29  2004  MotoGP    8     QP2\n",
+       "30  2004  MotoGP    8     QP2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "srchCol = \"rdr\"\n",
-    "srchVal = \"Marc MARQUEZ\"\n",
+    "srchVal = \"marc marquez\"\n",
+    "srchVal = \"max biaggi\"\n",
     "\n",
     "if srchCol == \"rdr\":\n",
     "    names = srchVal.split(\" \", 1)\n",
