--- a/E1_Analysis.ipynb
+++ b/E1_Analysis.ipynb
@@ -21,7 +21,7 @@
     "thisYr = \"2021\"\n",
     "thisRnd = \"15\"\n",
     "\n",
-    "print(\"\\ndone\")"
+    "print(\"done\")"
    ]
   },
   {
@@ -40,7 +40,7 @@
    ],
    "source": [
     "# updateSes(thisYr, thisRnd)\n",
-    "print(\"\\ndone\")"
+    "print(\"done\")"
    ]
   },
   {
