finished data retrieval
next, either data analysis, or machine learning

--- a/E1_Analysis.ipynb
+++ b/E1_Analysis.ipynb
@@ -9,7 +9,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "done\n"
      ]
     }
@@ -45,29 +44,449 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>lge</th>\n",
+       "      <th>rnd</th>\n",
+       "      <th>session</th>\n",
+       "      <th>trk</th>\n",
+       "      <th>rdr_num</th>\n",
+       "      <th>f_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>four_seconds</th>\n",
+       "      <th>avg_spd</th>\n",
+       "      <th>start</th>\n",
+       "      <th>lap_scaled</th>\n",
+       "      <th>one_scaled</th>\n",
+       "      <th>two_scaled</th>\n",
+       "      <th>thr_scaled</th>\n",
+       "      <th>four_scaled</th>\n",
+       "      <th>avgSpd_scaled</th>\n",
+       "      <th>results</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2005-125cc-1-FP1-1000</td>\n",
+       "      <td>April</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>125cc</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FP1</td>\n",
+       "      <td>Circuito de Jerez</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>joan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38.490</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.183740</td>\n",
+       "      <td>0.339167</td>\n",
+       "      <td>0.517903</td>\n",
+       "      <td>0.793179</td>\n",
+       "      <td>0.065690</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0-pos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2005-125cc-1-FP1-1001</td>\n",
+       "      <td>April</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>125cc</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FP1</td>\n",
+       "      <td>Circuito de Jerez</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>joan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.938</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.122286</td>\n",
+       "      <td>0.121593</td>\n",
+       "      <td>0.470725</td>\n",
+       "      <td>0.737287</td>\n",
+       "      <td>0.063041</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0-pos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2005-125cc-1-FP1-1002</td>\n",
+       "      <td>April</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>125cc</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FP1</td>\n",
+       "      <td>Circuito de Jerez</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>joan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.226</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.118395</td>\n",
+       "      <td>0.115732</td>\n",
+       "      <td>0.457738</td>\n",
+       "      <td>0.712849</td>\n",
+       "      <td>0.061826</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0-pos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2005-125cc-1-FP1-1003</td>\n",
+       "      <td>April</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>125cc</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FP1</td>\n",
+       "      <td>Circuito de Jerez</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>joan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.525</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.116406</td>\n",
+       "      <td>0.112753</td>\n",
+       "      <td>0.454167</td>\n",
+       "      <td>0.704855</td>\n",
+       "      <td>0.060630</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0-pos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-125cc-1-FP1-1004</td>\n",
+       "      <td>April</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>125cc</td>\n",
+       "      <td>1</td>\n",
+       "      <td>FP1</td>\n",
+       "      <td>Circuito de Jerez</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>joan</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.988</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.116323</td>\n",
+       "      <td>0.111692</td>\n",
+       "      <td>0.448298</td>\n",
+       "      <td>0.704008</td>\n",
+       "      <td>0.061420</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0-pos</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   index  month day    yr    lge rnd session  \\\n",
+       "0  2005-125cc-1-FP1-1000  April   8  2005  125cc   1     FP1   \n",
+       "1  2005-125cc-1-FP1-1001  April   8  2005  125cc   1     FP1   \n",
+       "2  2005-125cc-1-FP1-1002  April   8  2005  125cc   1     FP1   \n",
+       "3  2005-125cc-1-FP1-1003  April   8  2005  125cc   1     FP1   \n",
+       "4  2005-125cc-1-FP1-1004  April   8  2005  125cc   1     FP1   \n",
+       "\n",
+       "                 trk  rdr_num f_name  ... four_seconds avg_spd start  \\\n",
+       "0  Circuito de Jerez      6.0   joan  ...       38.490     NaN   NaN   \n",
+       "1  Circuito de Jerez      6.0   joan  ...       36.938     NaN   NaN   \n",
+       "2  Circuito de Jerez      6.0   joan  ...       36.226     NaN   NaN   \n",
+       "3  Circuito de Jerez      6.0   joan  ...       35.525     NaN   NaN   \n",
+       "4  Circuito de Jerez      6.0   joan  ...       35.988     NaN   NaN   \n",
+       "\n",
+       "  lap_scaled  one_scaled  two_scaled thr_scaled four_scaled avgSpd_scaled  \\\n",
+       "0   0.183740    0.339167    0.517903   0.793179    0.065690           NaN   \n",
+       "1   0.122286    0.121593    0.470725   0.737287    0.063041           NaN   \n",
+       "2   0.118395    0.115732    0.457738   0.712849    0.061826           NaN   \n",
+       "3   0.116406    0.112753    0.454167   0.704855    0.060630           NaN   \n",
+       "4   0.116323    0.111692    0.448298   0.704008    0.061420           NaN   \n",
+       "\n",
+       "   results  \n",
+       "0    0-pos  \n",
+       "1    0-pos  \n",
+       "2    0-pos  \n",
+       "3    0-pos  \n",
+       "4    0-pos  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "frame = getWholeFrame()\n",
-    "newFrame = frame.drop([\"pos\", \"lap_val\", \"lap_time\", \"sec_one\", \"one_val\", \"sec_two\",\n",
-    "            \"two_val\", \"sec_thr\", \"thr_val\", \"sec_four\", \"four_val\"], axis = 1)\n",
-    "newFrame.head()"
+    "\n",
+    "frame.()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>lge</th>\n",
+       "      <th>rnd</th>\n",
+       "      <th>session</th>\n",
+       "      <th>trk</th>\n",
+       "      <th>rdr_num</th>\n",
+       "      <th>f_name</th>\n",
+       "      <th>...</th>\n",
+       "      <th>four_seconds</th>\n",
+       "      <th>avg_spd</th>\n",
+       "      <th>start</th>\n",
+       "      <th>lap_scaled</th>\n",
+       "      <th>one_scaled</th>\n",
+       "      <th>two_scaled</th>\n",
+       "      <th>thr_scaled</th>\n",
+       "      <th>four_scaled</th>\n",
+       "      <th>avgSpd_scaled</th>\n",
+       "      <th>results</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2439</th>\n",
+       "      <td>2021-GP-9-WUP-1216</td>\n",
+       "      <td>June</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>9</td>\n",
+       "      <td>WUP</td>\n",
+       "      <td>TT Circuit Assen</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>garrett</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.917</td>\n",
+       "      <td>300.7</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.379494</td>\n",
+       "      <td>0.896269</td>\n",
+       "      <td>0.759658</td>\n",
+       "      <td>0.759454</td>\n",
+       "      <td>0.650453</td>\n",
+       "      <td>0.955817</td>\n",
+       "      <td>17th</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2440</th>\n",
+       "      <td>2021-GP-9-WUP-1217</td>\n",
+       "      <td>June</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>9</td>\n",
+       "      <td>WUP</td>\n",
+       "      <td>TT Circuit Assen</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>garrett</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.401</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.366765</td>\n",
+       "      <td>0.682029</td>\n",
+       "      <td>0.745808</td>\n",
+       "      <td>0.757490</td>\n",
+       "      <td>0.842885</td>\n",
+       "      <td>0.958042</td>\n",
+       "      <td>17th</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2441</th>\n",
+       "      <td>2021-GP-9-WUP-1218</td>\n",
+       "      <td>June</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>9</td>\n",
+       "      <td>WUP</td>\n",
+       "      <td>TT Circuit Assen</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>garrett</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22.031</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.344663</td>\n",
+       "      <td>0.686451</td>\n",
+       "      <td>0.749204</td>\n",
+       "      <td>0.758846</td>\n",
+       "      <td>0.653836</td>\n",
+       "      <td>0.958042</td>\n",
+       "      <td>17th</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2442</th>\n",
+       "      <td>2021-GP-9-WUP-1219</td>\n",
+       "      <td>June</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>9</td>\n",
+       "      <td>WUP</td>\n",
+       "      <td>TT Circuit Assen</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>garrett</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.837</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.343437</td>\n",
+       "      <td>0.683696</td>\n",
+       "      <td>0.742942</td>\n",
+       "      <td>0.761612</td>\n",
+       "      <td>0.648078</td>\n",
+       "      <td>0.958042</td>\n",
+       "      <td>17th</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2443</th>\n",
+       "      <td>2021-GP-9-WUP-1220</td>\n",
+       "      <td>June</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>MotoGP</td>\n",
+       "      <td>9</td>\n",
+       "      <td>WUP</td>\n",
+       "      <td>TT Circuit Assen</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>garrett</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.869</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.345017</td>\n",
+       "      <td>0.683807</td>\n",
+       "      <td>0.755997</td>\n",
+       "      <td>0.765762</td>\n",
+       "      <td>0.649028</td>\n",
+       "      <td>0.958042</td>\n",
+       "      <td>17th</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   index month day    yr     lge rnd session  \\\n",
+       "2439  2021-GP-9-WUP-1216  June  27  2021  MotoGP   9     WUP   \n",
+       "2440  2021-GP-9-WUP-1217  June  27  2021  MotoGP   9     WUP   \n",
+       "2441  2021-GP-9-WUP-1218  June  27  2021  MotoGP   9     WUP   \n",
+       "2442  2021-GP-9-WUP-1219  June  27  2021  MotoGP   9     WUP   \n",
+       "2443  2021-GP-9-WUP-1220  June  27  2021  MotoGP   9     WUP   \n",
+       "\n",
+       "                   trk  rdr_num   f_name  ... four_seconds avg_spd start  \\\n",
+       "2439  TT Circuit Assen     31.0  garrett  ...       21.917   300.7  22.0   \n",
+       "2440  TT Circuit Assen     31.0  garrett  ...       28.401   301.4  22.0   \n",
+       "2441  TT Circuit Assen     31.0  garrett  ...       22.031   301.4  22.0   \n",
+       "2442  TT Circuit Assen     31.0  garrett  ...       21.837   301.4  22.0   \n",
+       "2443  TT Circuit Assen     31.0  garrett  ...       21.869   301.4  22.0   \n",
+       "\n",
+       "     lap_scaled  one_scaled  two_scaled thr_scaled four_scaled avgSpd_scaled  \\\n",
+       "2439   0.379494    0.896269    0.759658   0.759454    0.650453      0.955817   \n",
+       "2440   0.366765    0.682029    0.745808   0.757490    0.842885      0.958042   \n",
+       "2441   0.344663    0.686451    0.749204   0.758846    0.653836      0.958042   \n",
+       "2442   0.343437    0.683696    0.742942   0.761612    0.648078      0.958042   \n",
+       "2443   0.345017    0.683807    0.755997   0.765762    0.649028      0.958042   \n",
+       "\n",
+       "      results  \n",
+       "2439     17th  \n",
+       "2440     17th  \n",
+       "2441     17th  \n",
+       "2442     17th  \n",
+       "2443     17th  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.tail()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pandas join function\n",
+    "# gradient boosted trees\n",
+    "# xgboost\n",
+    "# neural net\n"
+   ]
   },
   {
    "cell_type": "code",
