--- a/E1_Analysis.ipynb
+++ b/E1_Analysis.ipynb
@@ -15,10 +15,11 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import \n",
     "from jupyterHelpers import *\n",
     "\n",
     "thisYr = \"2021\"\n",
-    "thisRnd = \"15\"\n",
+    "rnds = [\"15\"]\n",
     "\n",
     "print(\"done\")"
    ]
@@ -38,7 +39,7 @@
     }
    ],
    "source": [
-    "# updateSes(thisYr, thisRnd)\n",
+    "# updateSes(thisYr, rnds)\n",
     "print(\"done\")"
    ]
   },
@@ -255,6 +256,7 @@
     }
    ],
    "source": [
+    "###  UNACCEPTABLE\n",
     "frame = getWholeFrame()\n",
     "\n",
     "frame.()"
