--- a/E1_Analysis.ipynb
+++ b/E1_Analysis.ipynb
@@ -15,7 +15,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "from IPython.display import clear_output\n",
     "from E2_AnalysisHelpers import *\n",
     "\n",
     "rnds = [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"13\", \"14\", \"15\", \"16\", \"17\", \"18\", \"19\",\n",
@@ -114,7 +114,8 @@
     "                frames.append(nF)\n",
     "\n",
     "wF = pd.concat(frames)\n",
-    "print(\"\\ndone\")"
+    "clear_output(wait=True)\n",
+    "print(\"\\nyears\\ndone\")"
    ]
   },
   {
