--- a/G1_Past Race Performance.ipynb
+++ b/G1_Past Race Performance.ipynb
@@ -413,7 +413,7 @@
     }
    ],
    "source": [
-    "combined"
+    "combined #comment this better or name better"
    ]
   },
   {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "Text(0, 0.5, 'Finishing Position')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -952,6 +952,8 @@
     }
    ],
    "source": [
+    "# this is wrong\n",
+    "\n",
     "conDict = {\"yr\": str, \"rnd\": str, \"rdr_num\": str}\n",
     "manFrame = df.astype(conDict)\n",
     "manFrame = manFrame.loc[manFrame[\"lge\"] == \"MotoGP\"]\n",
